# ASR_Conformer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  inference.py  main.py  pyproject.toml  requirements.txt  train.py
jsons/: dev-clean_index.json  test-clean_index.json  test-other_index.json
jsons_for_kaggle/: test-other_index.json
jsons_for_kaggle_training/: test-clean_index.json
notebooks/demo/: demo.ipynb
notebooks/training/: kaggle-bpe-ablation.ipynb  kaggle-train-1.ipynb  kaggle-train-2.ipynb  kaggle-train-3.ipynb
save/testing/: config.yaml  git_commit.txt  git_diff.patch
scripts/: __init__.py  calculate_wer_cer.py  download_gdrive.py  get_texts_for_bpe.py  show_augs.py
src/configs/: ablation_BPE.yaml  baseline.yaml  calc_metrics.yaml  inference.yaml  inference_all_metrics.yaml  local.yaml  script_kaggle.yaml  script_kaggle_2.yaml  script_local.yaml  show_augs.yaml  train_1.yaml  train_2.yaml  train_all.yaml  train_clean_360_1.yaml  train_other_2.yaml  train_other_500_2.yaml
src/configs/dataloader/: basic.yaml  kaggle.yaml  local.yaml  onebatchtest.yaml
src/configs/datasets/: basic.yaml  custom_dataset.yaml  inference_clean.yaml  inference_other.yaml  librispeech.yaml  onebatchtest.yaml  train_all.yaml  train_clean_360.yaml  train_other_500.yaml  train_test_val.yaml
src/configs/metrics/: All.yaml  (+5 more)
src/datasets/: __init__.py  base_dataset.py  collate.py  custom_dir_audio_dataset.py  data_utils.py
src/logger/: utils.py  wandb.py
src/loss/: CTCLoss.py  __init__.py  ctc_loss.py  loss.py
src/metrics/: __init__.py  cer.py  utils.py  wer.py
src/model/: __init__.py  activation_and_ffn.py  attention.py  baseline.py  conformer.py  conv.py  embedding.py  my_model.py
src/scheduler/: __init__.py  lr_schedule.py
src/text_encoder/: __init__.py  base_text_encoder.py  bpe.py  ctc_text_encoder.py  llm_scorer.py
src/trainer/: __init__.py  base_trainer.py  inferencer.py  trainer.py
src/transforms/: utils.py
(+21 files in other folders)
