[project]
name = "asr-conformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiomentations>=0.43.1",
    "black>=25.9.0",
    "comet-ml>=3.53.1",
    "datasets>=4.2.0",
    "editdistance>=0.8.1",
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipykernel>=7.0.0",
    "isort>=6.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "soundfile>=0.13.1",
    "tokenizers>=0.22.1",
    "torch==2.2.0",
    "torch-audiomentations>=0.12.0",
    "torchaudio==2.2.0",
    "torchmetrics>=1.8.2",
    "torchvision==0.17.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
    "wget>=3.2",
]
